Fixed some model issues, updating commit uploading versions to 1.20.1.